tests/type-arithmetic.stderr
error: 
   ┌─ test:11:5
   │
11 │ _ : _ -> result
   │     ^^^^^^^^^^^
   │     │
   │     could not determine the type of this expression
   │     this has type `_ -> S (S (S (S (S Z))))`
   │
   = annotate the type with `::`: `:: {%type%}`
   = for more information, see https://wipple.dev/playground/?lesson=errors/unknown-type

